add new official engine

--- a/app/views/lesli/apps/show.html.erb
+++ b/app/views/lesli/apps/show.html.erb
@@ -15,6 +15,7 @@ document.addEventListener('turbo:load', () => {
     :admin, 
     :mailer,
     :bell, 
+    :contacts,
     :calendar, 
     :papers,
     :support,
