--- a/lib/scss/_apps.scss
+++ b/lib/scss/_apps.scss
@@ -77,6 +77,7 @@ body.lesli.apps.show {
             // engine description
             p {
                 font-size: 14;
+                font-family: "OpenSans";
             }
 
             // engine name
